--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="scripts/p5.js"></script>
         <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+        <script src="scripts/quadtree.js"></script>
         <script src="scripts/sketch.js"></script>
     </head>
 </html>
