integrated quadtree into collision detection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <script src="scripts/p5.js"></script>
         <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-        <script src="scripts/quadtree.js"></script>
+        <script src="scripts/classes/quadtree.js"></script>
+        <script src="scripts/classes/player.js"></script>
+        <script src="scripts/classes/enemy.js"></script>
+        <script src="scripts/classes/powerup.js"></script>
         <script src="scripts/sketch.js"></script>
     </head>
 </html>
