added start screen

--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@
         <script src="scripts/classes/powerup.js"></script>
         <script src="scripts/sketch.js"></script>
     </head>
+
+    <body>
+        <button id="start"></button>
+    </body>
 </html>
